--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
   cursor: pointer;
 }
 
+option[disabled] {
+  background-color: #eee;
+}
+
+/* MovementView */
 .movement-category {
   color: white;
   padding: 2px 0;
@@ -25,14 +30,47 @@
   background-color: rgba(101, 59, 255, 0.75);
 }
 
-option[disabled] {
-  background-color: #eee;
-}
-
+/* Accounts View */
 .accounts-acc--container:hover .accounts-btn--delete {
   display: inline;
 }
 
 .accounts-btn--delete {
   display: none;
+}
+
+/* modalView */
+#addTransactionModal .row {
+  text-align: center;
+}
+.modal-checkbox--container {
+  text-align: center;
+  display: inline-block;
+  padding: 0;
+}
+
+.modal-transaction--legend {
+  font-size: 16px;
+  background-color: white;
+  font-weight: bold;
+}
+
+.modal-checkbox--input {
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+
+.modal-checkbox--label {
+  display: inline-block;
+  padding: 10px;
+}
+
+.modal-checkbox--label:hover {
+  cursor: pointer;
+}
+
+.modal-checkbox--input:checked ~ .modal-checkbox--label {
+  border: 1px solid rgba(73, 160, 252, 0.75);
+  background-color: rgba(73, 160, 252, 0.5);
 }
