--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   cursor: default;
+  box-sizing: border-box;
 }
 
 .form-select--from,
@@ -25,10 +26,22 @@ option[disabled] {
 }
 
 /* MovementView */
+.movement--container {
+  height: 600px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.movement--row {
+  height: 10%;
+}
+
 .movement-category {
   color: white;
   padding: 2px 0;
   border-radius: 12px;
+  max-height: 1.75rem;
+  overflow: hidden;
   margin: auto;
   width: 150px;
 }
