--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
                         "accordion"
                         "controls"
                         "transactions"
-                        "pagination"
-
+                        "pagination";
+  gap: 0.5rem 2rem
 
 }
 
@@ -30,6 +30,7 @@
 .movement--nav{
   grid-area: controls;
   display: flex;
+  justify-content: space-between;
 }
 
 .transactions--container{
@@ -40,14 +41,18 @@
   grid-area: accordion;
 }
 
+.pagination-container{
+  grid-area:pagination
+}
+
 
 @media(min-width:40rem){
   .main-container{
     grid-template-columns: 3fr 1fr;
     grid-template-rows: repeat(5,auto);
     grid-template-areas: "overview overview"
-                         "date ."
-                         "controls ."
+                         "date accordion"
+                         "controls accordion"
                          "transactions accordion"
                          "pagination .";
   }
