--- a/style.css
+++ b/style.css
@@ -392,6 +392,35 @@ option[disabled] {
   display: block;
 }
 
+.budget-chart::before{
+  content: "Expenses";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: #4f4f4f;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+}
+
+
+.budget-chart{
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: auto;
+  border-radius: 50%;
+  background-color: #ccc;
+  margin-bottom: 0.2rem;
+}
+
+
 
 .accounts-container{
   display: flex;
